Add auth and Basic Auth for healthz
