# docs/swagger.json
@@ -55,6 +55,11 @@
         },
         "/health": {
             "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Healthcheck endpoint",
                 "produces": [
                     "application/json"
@@ -776,9 +781,13 @@
     },
     "securityDefinitions": {
         "ApiKeyAuth": {
+            "description": "JWT Bearer token authentication",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
+        },
+        "BasicAuth": {
+            "type": "basic"
         }
     }
 }
